--- a/style.css
+++ b/style.css
@@ -1,56 +1,113 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto+Slab:wght@100..900&display=swap');
-.main{
+body{
+    height:730px;
+}
+.main {
     width: 100%;
-    height: 100vh;
-    background:url(/magic.jpg) center center;
+    height: 100%;
+    background: url(/magic.jpg) center center;
     background-size: cover;
 }
-.overlay{
+
+.overlay {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
 }
-h2{
-    margin: 50px;
-}
-h2, #end-date,h4{
+
+h2, #end-date, h4 {
     font-weight: bolder;
     font-size: 2.5rem;
     text-align: center;
-    
+    margin: 20px 0;
 }
-.col{
-    width: 1000px;
-    /* border: 2px solid aqua; */
-    margin:10px auto;
+
+/* Input Container */
+.col {
+    width: 90%;
+    max-width: 1000px;
     display: flex;
     justify-content: center;
-    /* margin-top: 10px; */
-   
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 10px auto;
 }
-.col div{
-    width: 250px;
+
+/* Each Input Block */
+.col div {
+    width: 200px;
     text-align: center;
-    /* border-radius: 8px; */
-    margin-top: 10px;
-    
 }
-input{
-    width: 60%;
+
+/* Input Box */
+input {
+    width: 100%;
+    max-width: 200px;
     background-color: rgba(255, 255, 255, 0.9);
     height: 50px;
     border-radius: 8px;
-    /* display: block; */
     text-align: center;
     font-size: 20px;
     color: black;
+}
+
+/* Blinking Text */
+#final1 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 10px auto;
+    border: 1px solid red;
+    animation: blink 1s infinite;
+    color: rgb(233, 204, 18);
+}
+
+/* Blinking Animation */
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    h2, #end-date, h4 {
+        font-size: 2rem;
+    }
+
+    .col {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .col div {
+        width: 100%;
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 480px) {
+    h2, #end-date, h4 {
+        font-size: 1.8rem;
+    }
+
+    input {
+        width: 90%;
+    }
 }
